<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kohm_description</name>
  <version>0.0.0</version>
  <description>Kohm is a friendly autonomous robot. This package is for the Kohm robot.</description>
  <maintainer email="isc-robotics@umich.edu">Intelligent Systems Club</maintainer>
  <maintainer email="dcutting@umich.edu">David Cutting</maintainer>
  <maintainer email="agirven@umich.edu">Avery Girven</maintainer>
  <maintainer email="avealov@umich.edu">Andy Ealovega</maintainer>
  <maintainer email="jkrasan@umich.edu">Jordan Krasan</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
